[package]
name = "atom-pw"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
mongodb = "3.2"
argon2 = "0.5"
futures = "0.3"
base64 = "0.22"
serde_json = "1"
serde_default = "0.2"
serde-inline-default = "0.2"

[dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread"
]

[dependencies.serde]
version = "1"
features = [
    "derive"
]
