[package]
name = "atom-pw"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", optional = true }
mongodb = { version = "3.2", optional = true }
futures = { version = "0.3", optional = true }
argon2 = { version = "0.5", optional = true }
base64 = { version = "0.22", optional = true }
serde_json = "1"
serde_default = "0.2"
serde-inline-default = "0.2"

[dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread"
]

[dependencies.serde]
version = "1"
features = [
    "derive"
]

[features]
default = [ ]
core = [ "dep:mongodb", "dep:futures", "dep:axum", "dep:argon2", "dep:base64" ]
